src/objects/Tier_Discount_Detail__c.object
<CustomObject>
    <fields>
        <fullName>NokiaCPQ_Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Industrial Partner / System Integrator</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Service Provider as a Reseller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Pricing_Tier__c</fullName>
        <label>Pricing Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Anticipated Basic</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Basic Distributor</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Authorised</fullName>
                </value>
                <value>
                    <fullName>Interim</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Authorized - Accreditation In Progress</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Co-Branded</fullName>
                </value>
                <value>
                    <fullName>Partner Branded</fullName>
                </value>
                <value>
                    <fullName>No Accreditation</fullName>
                </value>
                <value>
                    <fullName>Nokia Brand of Service</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Multi-Year</fullName>
                </value>
                <value>
                    <fullName>Nokia Brand of Service AED</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>LEO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Tier_Discount__c</fullName>
        <label>Tier Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Tier_Type__c</fullName>
        <label>Tier Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Incentives</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nokia_CPQ_Partner_Program__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nokia CPQ Partner Program</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Tier Discount Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Nokia_CPQ_Partner_Program__c</columns>
        <columns>NokiaCPQ_Partner_Type__c</columns>
        <columns>NokiaCPQ_Pricing_Tier__c</columns>
        <columns>NokiaCPQ_Tier_Discount__c</columns>
        <columns>NokiaCPQ_Tier_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Tier-{0000}</displayFormat>
        <label>Tier Discount Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tier Discount Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>